lab9.2/bak.tf
resource "azurerm_resource_group" "be-rg" {
  name     = "${var.env}-Be-rg"
  location = var.location-name
}
# Create a virtual network within the resource group
module "be-vnet" {
  source              = "Azure/vnet/azurerm"
  vnet_name           = "${var.env}-Web-vnet"
  resource_group_name = azurerm_resource_group.be-rg.name
  address_space       = ["10.0.2.0/23"]
  subnet_prefixes     = ["10.0.2.0/24"]
  subnet_names        = ["${var.env}-Web-subnet"]
  tags                = null
  depends_on = [azurerm_resource_group.be-rg]
}
/*
resource "azurerm_virtual_network" "be-rg" {
  name                = var.web-vnet-name
  resource_group_name = var.be-rg-name
  location            = var.location-name
  address_space       = ["10.0.2.0/23"]
}
bnets:
resource "azurerm_subnet" "be-rg" {
  name                 = var.web-sub-name
  resource_group_name  = var.be-rg-name
  virtual_network_name = azurerm_virtual_network.be-rg.name
  address_prefixes     = ["10.0.2.0/24"]
}
*/
module "web-vm" {
  source     = "../cmodules/compute"
  vm-name    = "${var.env}-Web"
  rg         = azurerm_resource_group.be-rg.name
  location   = azurerm_resource_group.be-rg.location
  subnet_id  = module.be-vnet.vnet_subnets[0]
  admin_user = var.admin_username
  admin_pass = var.admin_password
}
#Su
resource "azurerm_network_security_rule" "be-rg" {
  name                        = "web"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "80"
  source_address_prefix       = "*"
  destination_address_prefix  = "${module.web-vm.vm_private_ip}/32"
  resource_group_name         = azurerm_resource_group.be-rg.name
  network_security_group_name = module.web-vm.nsg_name
}
resource "azurerm_network_interface_security_group_association" "be-rg" {
  network_interface_id      = module.web-vm.nic_id
  network_security_group_id = module.web-vm.nsg_id
}
resource "azurerm_virtual_machine_extension" "be-rg" {
  name                 = "iis-extension"
  virtual_machine_id   = module.web-vm.vm_id
  publisher            = "Microsoft.Compute"
  type                 = "CustomScriptExtension"
  type_handler_version = "1.10"

  settings = <<SETTINGS
    {
        "commandToExecute": "powershell Install-WindowsFeature -name Web-Server -IncludeManagementTools;"
        
    }
SETTINGS
}
